fix alignment of application when viewed on browser to center

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 .App {
   text-align: center;
   background-color: #ff0000;
+  max-width: 400px;
+  max-height: 1200px;
+  justify-content: center;
+  align-items: center;
 }
 
 .App-link {
@@ -8,15 +12,18 @@
 }
 
 .searchbar-component {
-  position: absolute;
-  top: 70px;
-  left: 33%;
-  transform: translateX(-10%);
+  position: flex;
+  justify-content: center;
+  top: 50px;
+  left: 23%;
+  margin-left: 20px;
+  transform: translateX(10%);
   width: 80%;
+  padding-bottom: 25px;
 }
 
 .imagebox-component {
-  margin-top: 40px;
+  margin-top: 30px;
   display: flex;
   justify-content: center;
 }
@@ -32,4 +39,19 @@ body > div,
 .app {
   height: 100%;
   background-color: red;
+}
+
+.App {
+  text-align: center;
+  background-color: #ff0000;
+  max-width: 400px;
+  max-height: 1200px;
+  margin: 0 auto;
+}
+
+.searchbar-component,
+.imagebox-component,
+.infobox-component {
+  display: inline-block;
+  margin: 0 auto;
 }
